# ebpf-playground

./: README.md
cilium-host-process-identities-poc-demo/: ciliumid-auditor.yaml  policy-allow-auditor-db-access.yaml  policy-allow-teller-db-access.yaml
cilium-host-process-identities-poc-demo/v1/: DO-eBPF-MAGIC.sh  HOST_PROCESS_ID_DEMO.diff  auditor-pod.yaml  bank-teller-db-pods.yaml  ciliumid-auditor.yaml.tmpl
ebpf-pod-network-stats/: attach_ebpf_stats_prog.py  attach_ebpf_stats_prog.sh  bpf_network_stats.c  build-ebpf-netstats-attach-img-arm64.sh  build-ebpf-netstats-attach-img.sh  ebpf-netstats-attach-poc-amd64.yaml  ebpf-netstats-attach-poc-arm64.yaml
ebpf-pod-resize/: README.md  bootstrap-ebpf-demo.sh  build-ebpf-pod-resize-docker-img-amd64.sh  build-ebpf-pod-resize-docker-img.sh  crictl.yaml  ebpf-pod-resize-demo-amd64.yaml  ebpf-pod-resize-demo.Dockerfile  ebpf-pod-resize-demo.yaml  kube-build-pod-amd64.yaml  kube-build-pod.yaml  launch-ebpf-pod-resize.sh  podsnoop.py
ebpf-pod-resize-libbpf-rs-CO-RE/: README.md
ebpf-pod-resize-libbpf-rs-CO-RE/ebpf-pod-resize-libbpf-co-re/: Cargo.toml  Makefile  build-ebpf-pod-resize-co-re-docker-img.sh  build.rs  ebpf-pod-resize-co-re.Dockerfile  ebpf-pod-resize-co-re.yaml  kube-build-pod.yaml
ebpf-pod-resize-libbpf-rs-CO-RE/ebpf-pod-resize-libbpf-co-re/src/: get-podns-podname-ctrname.sh  main.rs  patch-pod-resources.sh
ebpf-pod-resize-libbpf-rs-CO-RE/ebpf-pod-resize-libbpf-co-re/src/bpf/: podsnoop.bpf.c  podsnoop.h  vmlinux.h
tc-vs-xdp-perf/: Makefile  README.md  tc_ingress.c  xdp_ingress.c
(+18 files in other folders)
