[package]
name = "podsnoop"
version = "0.0.7"
authors = ["Vinay Kulkarni <vskibum@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
libbpf-rs = { path = "../libbpf-rs/libbpf-rs" }
libc = "0.2"
plain = "0.2"
kube = { version = "0.75.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.16.0", features = ["v1_25"] }
tokio-util = "0.7.0"
assert-json-diff = "2.0.1"
validator = { version = "0.16.0", features = ["derive"] }
futures = "0.3.17"
jsonpath_lib = "0.3.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.8.21"
tokio = { version = "1.14.0", features = ["full"] }
either = "1.6.1"
schemars = "0.8.6"
static_assertions = "1.1.0"
tar = "0.4.37"
tracing = "0.1.29"
tracing-subscriber = "0.3.3"
warp = { version = "0.3", default-features = false, features = ["tls"] }
http = "0.2.5"
json-patch = "0.2.6"
tower = { version = "0.4.6", features = ["limit"] }
tower-http = { version = "0.3.2", features = ["trace", "decompression-gzip"] }
hyper = { version = "0.14.13", features = ["client", "http1", "stream", "tcp"] }
thiserror = "1.0.29"
backoff = "0.4.0"
clap = { version = "4.0", default-features = false, features = ["std", "cargo", "derive"] }
edit = "0.1.3"
tokio-stream = { version = "0.1.9", features = ["net"] }
you-can = "0.0.14"

[build-dependencies]
libbpf-cargo = { path = "../libbpf-rs/libbpf-cargo" }
